# time-butler

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: commit.yml
doc/readme_support/: configuration.md  types.md
src/: backup_organizer.rs  butler.rs  cli.rs  cli_interactor.rs  config.rs  config_reader.rs  day.rs  entry.rs  main.rs  project.rs  report.rs  report_manager.rs  storage_handler.rs  tables.rs  target.rs  version_info.rs  version_manager.rs  week.rs
