[package]
name = "time-butler"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.2" , features = ["derive"] }                           # for cli
serde = { version = "1.0", features = ["derive"] }                           # For serialize/deserialize
serde_json = "1.0"                                                           # For json use
serde_yaml = "0.9"                                                           # For yaml use
bincode = "1.3"                                                              # For binary serialization
chrono = { version = "0.4", features = ["serde"] }                           # For timestamp
tracing = "0.1"                                                              # For tracing (logging)
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }  # For tracing filtering
uuid = { version = "1.2", features = ["serde", "v4"] }                       # For usage of id's
comfy-table = "7.0"                                                          # For table printing
csv = "1.1"                                                                  # For writing csv reports
maud = "0.25"                                                                # For writing html
